k3s-configs/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 5000        
      targetPort: 5000
